[tool.poetry]
name = "ccsolver"
version = "0.1.0"
description = ""
authors = ["glanch <49610590+glanch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "^9.5.1"
networkx = "^2.8"
matplotlib = "^3.5.2"
gurobipy-stubs = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
